<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/royalblue"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="16dp"
        android:orientation="horizontal"
        />
    <ImageView
        android:id="@+id/image_header"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_management"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sample"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textManagement"
        app:layout_constraintStart_toStartOf="parent"
        />
</android.support.constraint.ConstraintLayout>