<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="340dp"
        >
        <TextView
            android:id="@+id/textAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:text="@string/account_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editAccountName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAccountName"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:text="@string/account_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editAccountName"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="16sp"
            android:text="@string/comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/editComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textComment"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/buttonIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_icon"
            android:textSize="16sp"
            android:theme="@style/ApplicationTheme.FlatButton"
            android:padding="8dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:maxLength="64"
            android:layout_marginTop="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editComment"
            />

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:maxWidth="128dp"
            android:maxHeight="128dp"
            tools:src="@drawable/icon"
            app:layout_constraintLeft_toRightOf="@+id/buttonIcon"
            app:layout_constraintTop_toBottomOf="@+id/editComment"
            android:layout_marginStart="@dimen/marginMedium"
            />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:theme="@style/ApplicationTheme.RaisedButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonIcon"
            android:layout_marginTop="32dp"
            />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>